<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alpha_animate"
        android:id="@+id/alpha_button"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate_animate"
        android:id="@+id/rotate_button"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate_animate"
        android:id="@+id/translate_button"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scale_animate"
        android:id="@+id/scale_button"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>